--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.23.1",
+    "axios": "^1.6.8",
     "chance": "^1.1.9",
+    "https-browserify": "^1.0.0",
     "lodash": "^4.17.21",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
