--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
-    "@mui/icons-material": "^5.10.9",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.14",
     "@mui/lab": "5.0.0-alpha.106",
-    "@mui/material": "^5.10.12",
+    "@mui/material": "^5.15.14",
     "@mui/x-date-pickers": "^5.0.6",
     "@reduxjs/toolkit": "^1.8.3",
     "@tabler/icons": "^1.84.0",
@@ -17,8 +17,10 @@
     "apexcharts": "^3.23.1",
     "axios": "^1.6.8",
     "chance": "^1.1.9",
+    "dayjs": "^1.11.10",
     "https-browserify": "^1.0.0",
     "lodash": "^4.17.21",
+    "material-table": "^2.0.5",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
     "react-apexcharts": "^1.3.7",
@@ -44,7 +46,8 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.3.1"
+    "prettier": "^2.3.1",
+    "typescript": "^5.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
